{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 14,
  "lineage": "123a9134-a99e-3521-ef3d-52d25436d52a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "automation-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:857518908901:instance/i-0f93771fdcd856383",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "automation-profile",
            "id": "i-0f93771fdcd856383",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ECE592.pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08c66f3d4c9ab7df6",
            "private_dns": "ip-10-0-1-216.ec2.internal",
            "private_ip": "10.0.1.216",
            "public_ip": "3.86.4.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f88879f65a0dd24e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b162eeba963d0fb0",
            "tags": {
              "Name": "automation-vm"
            },
            "tags_all": {
              "Name": "automation-vm"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0df5df1de336c13b4"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.automation-profile",
            "aws_iam_role.automation-role",
            "aws_security_group.automation-ssh-sg",
            "aws_subnet.automation-subnet-a",
            "data.aws_ami.latest-ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "automation-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857518908901:internet-gateway/igw-0f7168cc288a2971b",
            "id": "igw-0f7168cc288a2971b",
            "owner_id": "857518908901",
            "tags": {
              "Name": "automation-igw"
            },
            "tags_all": {
              "Name": "automation-igw"
            },
            "vpc_id": "vpc-0882725c2ff748edb"
          },
          "dependencies": [
            "aws_vpc.automation-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "automation-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857518908901:route-table/rtb-02bfb657350374e97",
            "id": "rtb-02bfb657350374e97",
            "owner_id": "857518908901",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f7168cc288a2971b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "automation-rt"
            },
            "tags_all": {
              "Name": "automation-rt"
            },
            "vpc_id": "vpc-0882725c2ff748edb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.automation-igw",
            "aws_vpc.automation-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "automation-ssh-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857518908901:security-group/sg-0df5df1de336c13b4",
            "description": "AllowSSHinboundtraffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowalloutbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df5df1de336c13b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "automation-ssh-sg",
            "name_prefix": "",
            "owner_id": "857518908901",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "automation-ssh-sg"
            },
            "tags_all": {
              "Name": "automation-ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0882725c2ff748edb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.automation-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "automation-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857518908901:subnet/subnet-0b162eeba963d0fb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b162eeba963d0fb0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "857518908901",
            "tags": {
              "Name": "automation-subnet-a"
            },
            "tags_all": {
              "Name": "automation-subnet-a"
            },
            "vpc_id": "vpc-0882725c2ff748edb"
          },
          "dependencies": [
            "aws_vpc.automation-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "automation-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857518908901:subnet/subnet-0a44a081b0ff8b501",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a44a081b0ff8b501",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "857518908901",
            "tags": {
              "Name": "automation-subnet-b"
            },
            "tags_all": {
              "Name": "automation-subnet-b"
            },
            "vpc_id": "vpc-0882725c2ff748edb"
          },
          "dependencies": [
            "aws_vpc.automation-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "automation-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:857518908901:vpc/vpc-0882725c2ff748edb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07ba295e78a003f7c",
            "default_route_table_id": "rtb-02869fda773da99b9",
            "default_security_group_id": "sg-092580549773d22f9",
            "dhcp_options_id": "dopt-6e6f7514",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0882725c2ff748edb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02869fda773da99b9",
            "owner_id": "857518908901",
            "tags": {
              "Name": "automation-vpc"
            },
            "tags_all": {
              "Name": "automation-vpc"
            }
          }
        }
      ]
    }
  ]
}